add loaders for routes