@@ -9,7 +9,7 @@
     <version>1.0</version>
     <packaging>war</packaging>
 	<properties>
-        <node.executionRootDirectory>C:\Program Files\nodejs\</node.executionRootDirectory>
+        <node.executionRootDirectory>C:\Program Files\</node.executionRootDirectory>
     </properties>
 
     <dependencies>
@@ -91,6 +91,15 @@
     <build>
         <testSourceDirectory>src/test</testSourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Allow JUnit to access the test classes -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
